Remove support for xes.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 $LAAS$
 
+ 39. Remove support for xes.
  38. Add support for 'long long' and 'unsigned long long' (64 bit integer
      types) to genom. Not supported by OpenPRS bindings for now.
  37. Added automatic mboxInit call after a successful lm in tclserv
