--- a/doc/user_guide/tex/genom-generation.tex
+++ b/doc/user_guide/tex/genom-generation.tex
@@ -88,7 +88,7 @@ directory to regenerate or compile the module.
 
 The {\tt -i} option modifies files in the {\tt codels/} directory. Use it
 carefully.  If you wish  to manually  get a  new   template file for  the
-codels, you can find them in the directory {\tt auto/user/}.  These files
+codels, you can find them in the directory {\tt .genom/codels/}.  These files
 are always  up-to-date. Also consider the  XEmacs  mode {\tt genom-mode},
 which lets  you  insert codel templates  into  existing codel files  (see
 chapter~\ref{cha|edit}).
@@ -100,9 +100,9 @@ chapter~\ref{cha|edit}).
 \section{Product of the generation}
 
 The module generation produces files in the two directories {\tt codels/}
-and {\tt auto/}.  The files located  in the  {\tt codels/}  directory are
+and {\tt server/}.  The files located  in the  {\tt codels/}  directory are
 described in the next chapter.  This  section describes the files located
-in  the  {\tt auto/} directory.   The {\tt  demo} module   is  used as an
+in  the  {\tt server/} directory.   The {\tt  demo} module   is  used as an
 example: you can always replace the string {\tt demo} by the name of your
 module.
 
