genom.tex needs varioref (to get \vref)

--- a/doc/user_guide/genom.tex
+++ b/doc/user_guide/genom.tex
@@ -39,6 +39,7 @@
 %\usepackage{pstricks}
 \usepackage{tabularx}
 \usepackage{multirow}
+\usepackage{varioref}
 
 \makeatletter
 \ifx\pdfoutput\@undefined\relax\else\ifnum\pdfoutput=1
