repair formatting by adding a missing curly brace.

--- a/doc/user_guide/tex/genom-module.tex
+++ b/doc/user_guide/tex/genom-module.tex
@@ -169,7 +169,7 @@ have to declare several execution tasks.
 \subsubsection{Interface libraries:}
 
 Modules provide two standard interface libraries in various programming
-languages (for now: {\tt C, tcl, XML, open-prs)).
+languages (for now: {\tt C, tcl, XML, open-prs}).
 
 \begin{itemize}
 \item A service library, which handles requests emission and reception,
