--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,7 @@
 $LAAS$
 
+ 52. Allow package names in require and codels_requires field to be
+     protected by double quote, so that require: "pkg >= n.n" works.
  51. User-controlled poster declarations without an explicit variable name
      are now obsolete (forbidden).
  50. Obsolete syntax now generate an error by default. The new -O option
