Added a chapter in user guide explaining GenoM syntax. The chapter is organized in sections corresponding to the different components of a module: internal database, requests, posters, execution tasks, ...

--- a/doc/user_guide/genom.tex
+++ b/doc/user_guide/genom.tex
@@ -103,6 +103,10 @@ module, an overview of \GenoM}
 \label{cha|using}
 \input{genom-using}
 
+\chapter{GenoM syntax}
+\label{cha|syntax}
+\input{genom-syntax}
+
 % -----------------------------------------------------------------------
 
 \appendix
